k8s/vulnerable-app/vulnerable-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-app
  namespace: default
  labels:
    app: vulnerable-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerable-app
  template:
    metadata:
      labels:
        app: vulnerable-app
    spec:
      containers:
      - name: vulnerable-app
        image: mwkwak3/vulnerable-app:v1.0.1
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: vulnerable-app-service
  namespace: default
  labels:
    app: vulnerable-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30083
    protocol: TCP
  selector:
    app: vulnerable-app
